# personal-mcp

./: README.md  pyproject.toml
src/mcp_kehvyn/: __main__.py  server.py
